# markdown2html

./: .pubignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/markdown2html_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: markdown2html.podspec
ios/Classes/: markdown2html.c
lib/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  markdown2html.dart  markdown2html_bindings_generated.dart
lib/api/: md.dart  md.freezed.dart
linux/: CMakeLists.txt
macos/: markdown2html.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: md.rs
src/: CMakeLists.txt  markdown2html.c
windows/: CMakeLists.txt
